--- a/.travis.yml
+++ b/.travis.yml
@@ -230,14 +230,14 @@ install:
         if [[ "${BOOST_VERSION}" == "trunk" ]]; then
           BOOST_URL="http://github.com/boostorg/boost.git"
           travis_retry git clone --depth 1 --recursive --quiet ${BOOST_URL} ${BOOST_DIR} || exit 1
-          (cd ${BOOST_DIR} && ./bootstrap.sh && ./b2 headers)
+          (cd ${BOOST_DIR} && ./bootstrap.sh && ./b2 headers) || exit 1
         else
           BOOST_URL="http://sourceforge.net/projects/boost/files/boost/${BOOST_VERSION}/boost_${BOOST_VERSION//\./_}.tar.gz"
           mkdir -p ${BOOST_DIR}
           { travis_retry wget --quiet -O - ${BOOST_URL} | tar --strip-components=1 -xz -C ${BOOST_DIR}; } || exit 1
         fi
         # Make sure we don't conflict with the Hana shipped with Boost
-        rm -rf ${BOOST_ROOT}/include/boost/{hana,hana.hpp}
+        rm -rf ${BOOST_DIR}/include/boost/{hana,hana.hpp} || exit 1
       fi
       CMAKE_OPTIONS+=" -DBOOST_ROOT=${BOOST_DIR}"
     fi
