--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -99,7 +99,7 @@ list(APPEND EXCLUDED_UNIT_TESTS "issues/github_75/*.cpp")
 boost_hana_target_name_for(github_75 "${CMAKE_CURRENT_LIST_DIR}/issues/github_75")
 add_executable(${github_75} EXCLUDE_FROM_ALL "issues/github_75/tu1.cpp" "issues/github_75/tu2.cpp")
 boost_hana_set_test_properties(${github_75})
-add_test(${github_75} ${CMAKE_CURRENT_BINARY_DIR}/${github_75})
+add_test(${github_75} "${CMAKE_CURRENT_BINARY_DIR}/${github_75}")
 add_dependencies(tests ${github_75})
 
 
@@ -118,6 +118,6 @@ foreach(_file IN LISTS UNIT_TESTS)
         target_link_libraries(${_target} PRIVATE Boost::boost)
     endif()
     target_include_directories(${_target} PRIVATE _include)
-    add_test(${_target} ${CMAKE_CURRENT_BINARY_DIR}/${_target})
+    add_test(${_target} "${CMAKE_CURRENT_BINARY_DIR}/${_target}")
     add_dependencies(tests ${_target})
 endforeach()
